--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                      <img class="card__image" src="img/photos/blog-01.jpg" srcset="img/photos/blog-01@2x.jpg 2x" width="410" height="468" loading="lazy" alt="Как выбрать детские ролики напрокат?">
                   </div>
                   <div class="card__bottom">
-                     <h3 class="blog__card-title card__title">Как выбрать детские ролики напрокат?</h3>
+                     <h3 class="card__title">Как выбрать детские ролики напрокат?</h3>
                   </div>
                </a>
 
@@ -454,7 +454,7 @@
                      <img class="card__image" src="img/photos/blog-02.jpg" srcset="img/photos/blog-02@2x.jpg 2x" width="410" height="468" loading="lazy" alt="Почему следует использовать специальные носки для роликов?">
                   </div>
                   <div class="card__bottom">
-                     <h3 class="blog__card-title card__title">Почему следует использовать специальные носки для роликов?</h3>
+                     <h3 class="card__title">Почему следует использовать специальные носки для роликов?</h3>
                   </div>
                </a>
 
@@ -463,7 +463,7 @@
                      <img class="card__image" src="img/photos/blog-03.jpg" srcset="img/photos/blog-03@2x.jpg 2x" width="410" height="190" loading="lazy" alt="Что входит в горнолыжный инвентарь?">
                   </div>
                   <div class="card__bottom">
-                     <h3 class="blog__card-title card__title">Что входит в горнолыжный инвентарь?</h3>
+                     <h3 class="card__title">Что входит в горнолыжный инвентарь?</h3>
                   </div>
                </a>
 
@@ -472,7 +472,7 @@
                      <img class="card__image" src="img/photos/blog-04.jpg" srcset="img/photos/blog-04@2x.jpg 2x" width="410" height="190" loading="lazy" alt="Самостоятельная починка велосипеда или велосервис?">
                   </div>
                   <div class="card__bottom">
-                     <h3 class="blog__card-title card__title">Самостоятельная починка велосипеда или велосервис?</h3>
+                     <h3 class="card__title">Самостоятельная починка велосипеда или велосервис?</h3>
                   </div>
                </a>
 
