--- a/index.html
+++ b/index.html
@@ -481,6 +481,52 @@
          </div>
       </section>
 
+      <section class="consultation">
+         <div class="container">
+            <div class="consultation__inner">
+
+               <div class="consultation__left">
+
+                  <h2 class="consultation__title">Получите бесплатную консультацию!</h2>
+                  <p class="consultation__text">Оставьте номер телефона и наш менеджер проконсультирует вас по всем вопросам!</p>
+
+                  <form class="form" action="#">
+
+                     <div class="form__top">
+                        <input class="form__input" type="tel" placeholder="+7 ___ ___-__-__">
+                        <button class="form__btn">Отправить</button>
+                     </div>
+
+                     <div class="form__bottom">
+                        <label class="form__checkbox">
+                           <input class="form__checkbox-input" type="checkbox">
+                           <span class="form__checkbox-fake"></span>
+                        </label>
+                        <p class="form__text">Нажимая на кнопку "Отправить", я даю свое согласие на <a class="form__link" href="#">обработку персональных данных</a></p>
+                     </div>
+
+                  </form>
+
+               </div>
+
+               <div class="consultation__right">
+                  <div class="messengers">
+                     <p class="messengers__title">Или напишите нам в удобный мессенджер</p>
+                     <a class="messengers__link messengers__link--telegram" href="#">
+                        <span class="messengers__link-text">Написать в Telegram</span>
+                        <img class="messengers__link-icon" src="img/icons/telegram.svg" width="24" height="24" loading="lazy" alt="">
+                     </a>
+                     <a class="messengers__link messengers__link--telegram" href="#">
+                        <span class="messengers__link-text">Написать в WhatsApp</span>
+                        <img class="messengers__link-icon" src="img/icons/whatsapp.svg" width="24" height="24" loading="lazy" alt="">
+                     </a>
+                  </div>
+               </div>
+
+            </div>
+         </div>
+      </section>
+
    </main>
 
    <footer class="footer">
