--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                   <form class="form" action="#">
 
                      <div class="form__top">
-                        <input class="form__input" type="tel" placeholder="+7 ___ ___-__-__">
+                        <input class="form__input" id="phone-input" type="tel" placeholder="+7 ___ ___-__-__">
                         <button class="form__btn">Отправить</button>
                      </div>
 
