--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
                      <div class="form__bottom">
                         <label class="form__checkbox">
-                           <input class="form__checkbox-input" type="checkbox">
+                           <input class="form__checkbox-input" type="checkbox" checked>
                            <span class="form__checkbox-fake"></span>
                         </label>
                         <p class="form__text">Нажимая на кнопку "Отправить", я даю свое согласие на <a class="form__link" href="#">обработку персональных данных</a></p>
@@ -511,15 +511,19 @@
 
                <div class="consultation__right">
                   <div class="messengers">
+
                      <p class="messengers__title">Или напишите нам в удобный мессенджер</p>
+
                      <a class="messengers__link messengers__link--telegram" href="#">
                         <span class="messengers__link-text">Написать в Telegram</span>
                         <img class="messengers__link-icon" src="img/icons/telegram.svg" width="24" height="24" loading="lazy" alt="">
                      </a>
+
                      <a class="messengers__link messengers__link--telegram" href="#">
                         <span class="messengers__link-text">Написать в WhatsApp</span>
                         <img class="messengers__link-icon" src="img/icons/whatsapp.svg" width="24" height="24" loading="lazy" alt="">
                      </a>
+
                   </div>
                </div>
 
