--- a/index.html
+++ b/index.html
@@ -514,15 +514,16 @@
 
                      <p class="messengers__title">Или напишите нам в удобный мессенджер</p>
 
-                     <a class="messengers__link messengers__link--telegram" href="#">
-                        <span class="messengers__link-text">Написать в Telegram</span>
-                        <img class="messengers__link-icon" src="img/icons/telegram.svg" width="24" height="24" loading="lazy" alt="">
-                     </a>
-
-                     <a class="messengers__link messengers__link--telegram" href="#">
-                        <span class="messengers__link-text">Написать в WhatsApp</span>
-                        <img class="messengers__link-icon" src="img/icons/whatsapp.svg" width="24" height="24" loading="lazy" alt="">
-                     </a>
+                     <div class="messengers__links">
+                        <a class="messengers__link messengers__link--telegram" href="#">
+                           <span class="messengers__link-text">Написать в Telegram</span>
+                           <img class="messengers__link-icon" src="img/icons/telegram.svg" width="24" height="24" loading="lazy" alt="">
+                        </a>
+                        <a class="messengers__link messengers__link--whatsapp" href="#">
+                           <span class="messengers__link-text">Написать в WhatsApp</span>
+                           <img class="messengers__link-icon" src="img/icons/whatsapp.svg" width="24" height="24" loading="lazy" alt="">
+                        </a>
+                     </div>
 
                   </div>
                </div>
