--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                <img class="header__logo-img" src="img/icons/logo.svg" width="141" height="53" alt="Скай">
             </div>
 
-            <nav class="header__menu">
+            <nav class="header__menu" id="menu">
                <ul class="header__menu-list">
                   <li class="header__menu-item">
                      <a class="header__menu-link" href="#">Прокат инвентаря</a>
@@ -46,6 +46,11 @@
                </ul>
             </nav>
 
+            <button class="header__menu-toggler" id="menu-toggler">
+               <img class="header__menu-toggler-icon header__menu-toggler-icon--open" src="img/icons/menu.svg" width="24" height="24" alt="Открыть меню">
+               <img class="header__menu-toggler-icon header__menu-toggler-icon--close" src="img/icons/close.svg" width="24" height="24" alt="Закрыть меню">
+            </button>
+
             <span class="header__time">Ежедневно 10.00-22.00</span>
 
             <div class="header__phone">
@@ -60,7 +65,7 @@
 
    <main class="main">
 
-      <section class="hero">
+      <section class="hero none">
          <div class="container">
 
             <div class="hero__info">
@@ -104,7 +109,7 @@
          </div>
       </section>
 
-      <section class="summer">
+      <section class="summer none">
          <div class="container">
 
             <h2 class="summer__title title-2">
@@ -171,7 +176,7 @@
          </div>
       </section>
 
-      <section class="winter">
+      <section class="winter none">
          <div class="container">
 
             <h2 class="winter__title title-2">
@@ -251,7 +256,7 @@
          </div>
       </section>
 
-      <section class="additional">
+      <section class="additional none">
          <div class="container">
             <div class="additional__inner">
 
@@ -320,7 +325,7 @@
          </div>
       </section>
 
-      <section class="news">
+      <section class="news none">
          <div class="container">
 
             <div class="news__top">
@@ -433,7 +438,7 @@
          </div>
       </section>
 
-      <section class="blog">
+      <section class="blog none">
          <div class="container">
 
             <h2 class="blog__title title-2">Блог</h2>
@@ -481,7 +486,7 @@
          </div>
       </section>
 
-      <section class="consultation">
+      <section class="consultation none">
          <div class="container">
             <div class="consultation__inner">
 
@@ -532,7 +537,7 @@
          </div>
       </section>
 
-      <section class="rental">
+      <section class="rental none">
          <div class="container">
             <div class="rental__inner">
 
@@ -550,7 +555,7 @@
 
    </main>
 
-   <footer class="footer">
+   <footer class="footer none">
       <div class="container">
 
          <div class="footer__top">
