--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
    <main class="main">
 
-      <section class="hero none">
+      <section class="hero">
          <div class="container">
 
             <div class="hero__info">
