--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
          </div>
       </section>
 
-      <section class="summer none">
+      <section class="summer">
          <div class="container">
 
             <h2 class="summer__title title-2">
