--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
          </div>
       </section>
 
-      <section class="summer">
+      <section class="summer section">
          <div class="container">
 
             <h2 class="summer__title title-2">
@@ -176,7 +176,7 @@
          </div>
       </section>
 
-      <section class="winter none">
+      <section class="winter section">
          <div class="container">
 
             <h2 class="winter__title title-2">
@@ -256,7 +256,7 @@
          </div>
       </section>
 
-      <section class="additional none">
+      <section class="additional section none">
          <div class="container">
             <div class="additional__inner">
 
@@ -438,7 +438,7 @@
          </div>
       </section>
 
-      <section class="blog none">
+      <section class="blog section none">
          <div class="container">
 
             <h2 class="blog__title title-2">Блог</h2>
@@ -486,7 +486,7 @@
          </div>
       </section>
 
-      <section class="consultation none">
+      <section class="consultation section none">
          <div class="container">
             <div class="consultation__inner">
 
