--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
          </div>
       </section>
 
-      <section class="additional section none">
+      <section class="additional section">
          <div class="container">
             <div class="additional__inner">
 
