--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
          </div>
       </section>
 
-      <section class="news none">
+      <section class="news">
          <div class="container">
 
             <div class="news__top">
