--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="hero__info">
                <div class="hero__heading">
                   <h1 class="hero__title">
-                     Аренда спортивного инвентаря и снаряжения для
+                     Аренда спортивного инвентаря и&nbsp;снаряжения для
                      <span class="hero__title-mark">активного отдыха</span>
                   </h1>
                   <p class="hero__text">Пункт по прокату спортивного инвентаря в Перми «Шторм» — это широкий выбор экипировки и оборудования для занятия спортом на улице. </p>
@@ -438,7 +438,7 @@
          </div>
       </section>
 
-      <section class="blog section none">
+      <section class="blog section">
          <div class="container">
 
             <h2 class="blog__title title-2">Блог</h2>
