--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
          </div>
       </section>
 
-      <section class="consultation section none">
+      <section class="consultation section">
          <div class="container">
             <div class="consultation__inner">
 
