--- a/index.html
+++ b/index.html
@@ -537,11 +537,11 @@
          </div>
       </section>
 
-      <section class="rental none">
+      <section class="rental">
          <div class="container">
             <div class="rental__inner">
 
-               <h2 class="rental__title title-2">Прокат спортивного инвентаря в Перми</h2>
+               <h2 class="rental__title title-2">Прокат спортивного инвентаря в&nbsp;Перми</h2>
 
                <div class="rental__text-box">
                   <p class="rental__text">Для любителей активного образа жизни любой сезон становится в радость. Будь за окном жаркое лето или холодная снежная зима, любители жить активно рады провести время на улице. Благодаря тому, что существуют прокаты спортивного инвентаря, в Перми все больше появляется активных движений, пропагандирующих здоровый образ жизни и предпочитающих проводить свободное время, катаясь на <a class="rental__link" href="#">велосипедах</a>, <a class="rental__link" href="#">электросамокатах</a> и <a class="rental__link" href="#">роликах</a>. А когда наступает зима, с радостью выходят на покорение снежных гор со <a class="rental__link" href="#">сноубордами</a> и <a class="rental__link" href="#">лыжами</a>. Пункт по прокату спортивного инвентаря в Перми «Шторм» — это широкий выбор экипировки и оборудования для занятия спортом на улице. Здесь представлен спортивный инвентарь от брендов с мировым именем.</p>
