--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
    </main>
 
-   <footer class="footer none">
+   <footer class="footer">
       <div class="container">
 
          <div class="footer__top">
