--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                <img class="header__logo-img" src="img/icons/logo.svg" width="141" height="53" alt="Скай">
             </div>
 
-            <nav class="header__menu" id="menu">
+            <nav class="header__menu" data-menu>
                <ul class="header__menu-list">
                   <li class="header__menu-item">
                      <a class="header__menu-link" href="#">Прокат инвентаря</a>
@@ -46,7 +46,7 @@
                </ul>
             </nav>
 
-            <button class="header__menu-toggler" id="menu-toggler">
+            <button class="header__menu-toggler" data-menu-toggler>
                <img class="header__menu-toggler-icon header__menu-toggler-icon--open" src="img/icons/menu.svg" width="24" height="24" alt="Открыть меню">
                <img class="header__menu-toggler-icon header__menu-toggler-icon--close" src="img/icons/close.svg" width="24" height="24" alt="Закрыть меню">
             </button>
@@ -331,13 +331,13 @@
             <div class="news__top">
                <h2 class="title-2">Новости</h2>
                <div class="news__controls">
-                  <button class="news__control" id="news-swiper-prev">
+                  <button class="news__control" data-news-swiper-prev>
                      <svg class="news__control-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M19.0711 12L4.92893 12" stroke="#5B7DDE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         <path d="M12 19.071L4.92893 12L12 4.92891" stroke="#5B7DDE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                      </svg>
                   </button>
-                  <button class="news__control" id="news-swiper-next">
+                  <button class="news__control" data-news-swiper-next>
                      <svg class="news__control-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M4.92893 12H19.0711" stroke="#5B7DDE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         <path d="M12 4.92896L19.0711 12L12 19.0711" stroke="#5B7DDE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -347,7 +347,7 @@
             </div>
 
             <div class="news__body">
-               <div class="swiper" id="news-swiper">
+               <div class="swiper" data-news-swiper>
                   <div class="swiper-wrapper">
 
                      <div class="swiper-slide">
@@ -432,7 +432,7 @@
             </div>
 
             <div class="news__bottom">
-               <div class="news__pagination" id="news-swiper-pagination"></div>
+               <div class="news__pagination" data-news-swiper-pagination></div>
             </div>
 
          </div>
@@ -498,13 +498,13 @@
                   <form class="form" action="#">
 
                      <div class="form__top">
-                        <input class="form__input" id="tel-input" type="tel" placeholder="+7 ___ ___-__-__">
+                        <input class="form__input" type="tel" name="tel" inputmode="numeric" autocomplete="on" placeholder="+7 ___ ___-__-__" data-tel-input>
                         <button class="form__btn">Отправить</button>
                      </div>
 
                      <div class="form__bottom">
                         <label class="form__checkbox">
-                           <input class="form__checkbox-input" type="checkbox" checked>
+                           <input class="form__checkbox-input" type="checkbox" name="checkbox" checked>
                            <span class="form__checkbox-fake"></span>
                         </label>
                         <p class="form__text">Нажимая на кнопку "Отправить", я даю свое согласие на <a class="form__link" href="#">обработку персональных данных</a></p>
