--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-   <header class="header">
+   <header class="header" data-header>
       <div class="container">
          <div class="header__inner">
 
