--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-01.jpg" srcset="img/photos/summer-01@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Велосипеды">
+                     <img class="card__image" src="img/photos/summer-01.webp" srcset="img/photos/summer-01@2x.webp 2x" width="630" height="234" loading="lazy" alt="Велосипеды">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
@@ -134,7 +134,7 @@
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-02.jpg" srcset="img/photos/summer-02@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Роликовые коньки">
+                     <img class="card__image" src="img/photos/summer-02.webp" srcset="img/photos/summer-02@2x.webp 2x" width="630" height="234" loading="lazy" alt="Роликовые коньки">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
@@ -147,7 +147,7 @@
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-03.jpg" srcset="img/photos/summer-03@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Самокаты">
+                     <img class="card__image" src="img/photos/summer-03.webp" srcset="img/photos/summer-03@2x.webp 2x" width="630" height="234" loading="lazy" alt="Самокаты">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
@@ -160,13 +160,13 @@
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-04.jpg" srcset="img/photos/summer-04@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Детскиее электромобили">
+                     <img class="card__image" src="img/photos/summer-04.webp" srcset="img/photos/summer-04@2x.webp 2x" width="630" height="234" loading="lazy" alt="Детские электромобили">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
-                     <h3 class="card__title">Детскиее электромобили</h3>
+                     <h3 class="card__title">Детские электромобили</h3>
                      <p class="card__text">Порадуйте своего ребенка поездкой на электромашинке!</p>
                   </div>
                </a>
@@ -188,7 +188,7 @@
 
                <a class="winter__card card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/winter-01.jpg" srcset="img/photos/winter-01@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Беговые лыжи">
+                     <img class="card__image" src="img/photos/winter-01.webp" srcset="img/photos/winter-01@2x.webp 2x" width="410" height="234" loading="lazy" alt="Беговые лыжи">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
@@ -201,7 +201,7 @@
 
                <a class="winter__card card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/winter-02.jpg" srcset="img/photos/winter-02@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Сноуборды">
+                     <img class="card__image" src="img/photos/winter-02.webp" srcset="img/photos/winter-02@2x.webp 2x" width="410" height="234" loading="lazy" alt="Сноуборды">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
@@ -214,7 +214,7 @@
 
                <a class="winter__card card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/winter-03.jpg" srcset="img/photos/winter-03@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Горные лыжи">
+                     <img class="card__image" src="img/photos/winter-03.webp" srcset="img/photos/winter-03@2x.webp 2x" width="410" height="234" loading="lazy" alt="Горные лыжи">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
@@ -227,7 +227,7 @@
 
                <a class="winter__card card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/winter-04.jpg" srcset="img/photos/winter-04@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Зимняя экипировка">
+                     <img class="card__image" src="img/photos/winter-04.webp" srcset="img/photos/winter-04@2x.webp 2x" width="630" height="234" loading="lazy" alt="Зимняя экипировка">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
@@ -240,7 +240,7 @@
 
                <a class="winter__card card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/winter-05.jpg" srcset="img/photos/winter-05@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Зимний инвентарь">
+                     <img class="card__image" src="img/photos/winter-05.webp" srcset="img/photos/winter-05@2x.webp 2x" width="630" height="234" loading="lazy" alt="Зимний инвентарь">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
@@ -269,7 +269,7 @@
 
                   <a class="card" href="#">
                      <div class="card__top">
-                        <img class="card__image" src="img/photos/additional-01.jpg" srcset="img/photos/additional-01@2x.jpg 2x" width="382" height="234" loading="lazy" alt="Ski-сервис">
+                        <img class="card__image" src="img/photos/additional-01.webp" srcset="img/photos/additional-01@2x.webp 2x" width="382" height="234" loading="lazy" alt="Ski-сервис">
                         <div class="card__icon">
                            <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                         </div>
@@ -282,7 +282,7 @@
 
                   <a class="card" href="#">
                      <div class="card__top">
-                        <img class="card__image" src="img/photos/additional-02.jpg" srcset="img/photos/additional-02@2x.jpg 2x" width="382" height="234" loading="lazy" alt="Велосервис">
+                        <img class="card__image" src="img/photos/additional-02.webp" srcset="img/photos/additional-02@2x.webp 2x" width="382" height="234" loading="lazy" alt="Велосервис">
                         <div class="card__icon">
                            <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                         </div>
@@ -295,7 +295,7 @@
 
                   <a class="card" href="#">
                      <div class="card__top">
-                        <img class="card__image" src="img/photos/additional-03.jpg" srcset="img/photos/additional-03@2x.jpg 2x" width="382" height="234" loading="lazy" alt="Велозапчасти">
+                        <img class="card__image" src="img/photos/additional-03.webp" srcset="img/photos/additional-03@2x.webp 2x" width="382" height="234" loading="lazy" alt="Велозапчасти">
                         <div class="card__icon">
                            <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                         </div>
@@ -308,7 +308,7 @@
 
                   <a class="card" href="#">
                      <div class="card__top">
-                        <img class="card__image" src="img/photos/additional-04.jpg" srcset="img/photos/additional-04@2x.jpg 2x" width="382" height="234" loading="lazy" alt="Продажа б/у велосипедов">
+                        <img class="card__image" src="img/photos/additional-04.webp" srcset="img/photos/additional-04@2x.webp 2x" width="382" height="234" loading="lazy" alt="Продажа б/у велосипедов">
                         <div class="card__icon">
                            <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                         </div>
@@ -447,7 +447,7 @@
 
                <a class="blog__card card" href="#">
                   <div class="blog__card-top blog__card-top--large card__top">
-                     <img class="card__image" src="img/photos/blog-01.jpg" srcset="img/photos/blog-01@2x.jpg 2x" width="410" height="468" loading="lazy" alt="Как выбрать детские ролики напрокат?">
+                     <img class="card__image" src="img/photos/blog-01.webp" srcset="img/photos/blog-01@2x.webp 2x" width="410" height="468" loading="lazy" alt="Как выбрать детские ролики напрокат?">
                   </div>
                   <div class="card__bottom">
                      <h3 class="card__title">Как выбрать детские ролики напрокат?</h3>
@@ -456,7 +456,7 @@
 
                <a class="blog__card card" href="#">
                   <div class="blog__card-top blog__card-top--large card__top">
-                     <img class="card__image" src="img/photos/blog-02.jpg" srcset="img/photos/blog-02@2x.jpg 2x" width="410" height="468" loading="lazy" alt="Почему следует использовать специальные носки для роликов?">
+                     <img class="card__image" src="img/photos/blog-02.webp" srcset="img/photos/blog-02@2x.webp 2x" width="410" height="468" loading="lazy" alt="Почему следует использовать специальные носки для роликов?">
                   </div>
                   <div class="card__bottom">
                      <h3 class="card__title">Почему следует использовать специальные носки для роликов?</h3>
@@ -465,7 +465,7 @@
 
                <a class="blog__card card" href="#">
                   <div class="blog__card-top card__top">
-                     <img class="card__image" src="img/photos/blog-03.jpg" srcset="img/photos/blog-03@2x.jpg 2x" width="410" height="190" loading="lazy" alt="Что входит в горнолыжный инвентарь?">
+                     <img class="card__image" src="img/photos/blog-03.webp" srcset="img/photos/blog-03@2x.webp 2x" width="410" height="190" loading="lazy" alt="Что входит в горнолыжный инвентарь?">
                   </div>
                   <div class="card__bottom">
                      <h3 class="card__title">Что входит в горнолыжный инвентарь?</h3>
@@ -474,7 +474,7 @@
 
                <a class="blog__card card" href="#">
                   <div class="blog__card-top card__top">
-                     <img class="card__image" src="img/photos/blog-04.jpg" srcset="img/photos/blog-04@2x.jpg 2x" width="410" height="190" loading="lazy" alt="Самостоятельная починка велосипеда или велосервис?">
+                     <img class="card__image" src="img/photos/blog-04.webp" srcset="img/photos/blog-04@2x.webp 2x" width="410" height="190" loading="lazy" alt="Самостоятельная починка велосипеда или велосервис?">
                   </div>
                   <div class="card__bottom">
                      <h3 class="card__title">Самостоятельная починка велосипеда или велосервис?</h3>
