--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <div class="hero__feature-icon">
                      <img class="hero__feature-img" src="img/icons/hero-01.svg" width="22" height="22" alt="">
                   </div>
-                  <h3 class="hero__feature-title">Выгодные условия</h3>
+                  <p class="hero__feature-title">Выгодные условия</p>
                   <p class="hero__feature-text">Прокат велосипедов, удобное расположение</p>
                </div>
 
@@ -100,7 +100,7 @@
                   <div class="hero__feature-icon">
                      <img class="hero__feature-img" src="img/icons/hero-02.svg" width="22" height="22" alt="">
                   </div>
-                  <h3 class="hero__feature-title">Приемлемые цены</h3>
+                  <p class="hero__feature-title">Приемлемые цены</p>
                   <p class="hero__feature-text">Прокат велосипедов, удобное расположение</p>
                </div>
 
@@ -108,7 +108,7 @@
                   <div class="hero__feature-icon">
                      <img class="hero__feature-img" src="img/icons/hero-03.svg" width="21" height="22" alt="">
                   </div>
-                  <h3 class="hero__feature-title">Удобное местоположение</h3>
+                  <p class="hero__feature-title">Удобное местоположение</p>
                   <p class="hero__feature-text">Прокат велосипедов, удобное расположение</p>
                </div>
 
@@ -455,7 +455,7 @@
 
                <a class="blog__card card" href="#">
                   <div class="blog__card-top blog__card-top--large card__top">
-                     <img class="card__image" src="img/photos/blog-01.webp" srcset="img/photos/blog-01@2x.webp 2x" width="410" height="468" loading="lazy" alt="Как выбрать детские ролики напрокат?">
+                     <img class="card__image" src="img/photos/blog-01.webp" srcset="img/photos/blog-01@2x.webp 2x" width="410" height="468" loading="lazy" alt="Детские ролики">
                   </div>
                   <div class="card__bottom">
                      <h3 class="card__title">Как выбрать детские ролики напрокат?</h3>
@@ -464,7 +464,7 @@
 
                <a class="blog__card card" href="#">
                   <div class="blog__card-top blog__card-top--large card__top">
-                     <img class="card__image" src="img/photos/blog-02.webp" srcset="img/photos/blog-02@2x.webp 2x" width="410" height="468" loading="lazy" alt="Почему следует использовать специальные носки для роликов?">
+                     <img class="card__image" src="img/photos/blog-02.webp" srcset="img/photos/blog-02@2x.webp 2x" width="410" height="468" loading="lazy" alt="Специальные носки для роликов">
                   </div>
                   <div class="card__bottom">
                      <h3 class="card__title">Почему следует использовать специальные носки для роликов?</h3>
@@ -473,7 +473,7 @@
 
                <a class="blog__card card" href="#">
                   <div class="blog__card-top card__top">
-                     <img class="card__image" src="img/photos/blog-03.webp" srcset="img/photos/blog-03@2x.webp 2x" width="410" height="190" loading="lazy" alt="Что входит в горнолыжный инвентарь?">
+                     <img class="card__image" src="img/photos/blog-03.webp" srcset="img/photos/blog-03@2x.webp 2x" width="410" height="190" loading="lazy" alt="Горнолыжный инвентарь">
                   </div>
                   <div class="card__bottom">
                      <h3 class="card__title">Что входит в горнолыжный инвентарь?</h3>
@@ -482,7 +482,7 @@
 
                <a class="blog__card card" href="#">
                   <div class="blog__card-top card__top">
-                     <img class="card__image" src="img/photos/blog-04.webp" srcset="img/photos/blog-04@2x.webp 2x" width="410" height="190" loading="lazy" alt="Самостоятельная починка велосипеда или велосервис?">
+                     <img class="card__image" src="img/photos/blog-04.webp" srcset="img/photos/blog-04@2x.webp 2x" width="410" height="190" loading="lazy" alt="Самостоятельная починка велосипеда">
                   </div>
                   <div class="card__bottom">
                      <h3 class="card__title">Самостоятельная починка велосипеда или велосервис?</h3>
@@ -512,7 +512,7 @@
 
                      <div class="form__bottom">
                         <label class="form__checkbox">
-                           <input class="form__checkbox-input" type="checkbox" name="checkbox" checked>
+                           <input class="form__checkbox-input" type="checkbox" name="checkbox" aria-label="Согласен с условиями" checked>
                            <span class="form__checkbox-fake"></span>
                         </label>
                         <p class="form__text">Нажимая на кнопку "Отправить", я даю свое согласие на <a class="form__link" href="#">обработку персональных данных</a></p>
